# reshade_preset_switcher

./: Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: build.yml  check.yml
src/: lib.rs
src/addon/: mod.rs
src/api/: mod.rs
src/api/gw2/: mod.rs
src/config/: mod.rs
src/config/notifications/: mod.rs
src/config/preset_rule/: mod.rs
src/config/preset_rule/rule_condition/: mod.rs
src/config/preset_rule/rule_condition/condition_data/: mod.rs
src/config/preset_rule/rule_condition/condition_data/time_periods/: mod.rs
src/config/preset_rule/rule_condition/conjunction_type/: mod.rs
src/config/preset_rule/rule_condition/rule_data/: mod.rs
src/config/reshade_config/: mod.rs
src/context/: mod.rs
src/context/links/: mod.rs
src/context/reshade_context/: mod.rs
src/context/reshade_context/key_combination/: mod.rs
src/context/time_period/: mod.rs
src/context/ui/: mod.rs
src/render/: mod.rs
src/render/options/: mod.rs
src/render/options/general_tab/: mod.rs
src/render/options/general_tab/configuration/: mod.rs
src/render/options/general_tab/rule_edit/: mod.rs
src/render/quick_access/: mod.rs
src/render/util/: mod.rs
src/render/util/ui/: mod.rs
src/render/util/ui/extended/: mod.rs
src/thread/: mod.rs
src/thread/preset_rule/: mod.rs
src/util/: mod.rs
src/util/reshade/: mod.rs
